kubernetes/portainer/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portainer
  namespace: portainer
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`portainer.local.vineelsai.com`)
      kind: Rule
      services:
        - name: portainer
          port: 9443
  tls:
    secretName: local-vineelsai-com-tls
